# motion

./: CREDITS  ChangeLog  Makefile.am  Notes.txt  README.FreeBSD  autogen.sh  autogen.sh-freebsd  conf.c  conf.h  config.h.in  configure.in  configure.in.freebsd  motion-dist.conf  motion-dist.conf.in  motion.c  motion.conf  motion_guide.html  motion_version.h.in  thread.netcam0  thread.video0  video.h  video_common.c
debian/: README.Debian  changelog  motion.1  motion.conf  rules
plugins/: Makefile.am  Notes.txt  bktr_params.h  bktr_plugin.c  bktr_plugin.h  netcam_jpeg.c  netcam_params.h  netcam_plugin.c  netcam_plugin.h  netcam_wget.c  netcam_wget.h  v4l_params.h  v4l_plugin.c  v4l_plugin.h
src/: Makefile.am  Notes.txt  alg.c  bbnotes.txt  configure.scan  event.c  ffmpeg.c  global_params.h  motion.c  motion.h  newconfig.c  newconfig.h  picture.c  plugins.c  plugins.h  rotate.c  track.c  utils.c  utils.h  video_freebsd.c  video_freebsd.h  webcam.c  webhttpd.c  webhttpd.h
